Fix spacing after leaderboard module. closes #240

--- a/less/app.less
+++ b/less/app.less
@@ -624,6 +624,8 @@ nav {
 
 		.leaderboard-wrapper {
 			.make-row();
+			margin-bottom: @line-height-computed;
+
 
 			.top-organizations,
 			.top-categories,
